# ya

./: -  CHANGELOG.md  LICENSE  README.md  Ya.hs  ya.cabal
Ya/: Algebra.hs  Operators.hs  Program.hs
Ya/Algebra/: Abstract.hs  Definition.hs  Effectful.hs  Instances.hs  Operators.hs
Ya/Algebra/Operators/: Composites.hs  Foundation.hs  Functions.hs  Generated.hs  Handcraft.hs
Ya/Operators/: Functions.hs  Generated.hs  Handcraft.hs  Mappings.hs
Ya/Program/: Interface.hs  Labels.hs  Patterns.hs  Primitive.hs
Ya/Program/Interface/: Field.hs  Fieldable.hs  Instances.hs  Keyable.hs  Match.hs  Matchable.hs  Scroll.hs  Shiftable.hs  Slide.hs  Stack.hs  Stackable.hs
