name:                ya
version:             0.0.0
synopsis:            ...
description:         ...
homepage:            ...
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md, README.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2023 Murat Kasimov
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules: Ya
  other-modules:
    Ya.Algebra
    Ya.Algebra.Abstract
    Ya.Algebra.Definition
    Ya.Algebra.Instances
    Ya.Algebra.Operators
    Ya.Program 
    Ya.Program.Interface
    Ya.Program.Primitive
  default-extensions:
    DataKinds
    DeriveAnyClass
    ConstraintKinds
    ExistentialQuantification
    GADTs
    QuantifiedConstraints
    InstanceSigs
    StandaloneKindSignatures
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    StandaloneKindSignatures
    LiberalTypeSynonyms
    LambdaCase
    FunctionalDependencies
    MultiParamTypeClasses
    NoImplicitPrelude
    PackageImports
    PolyKinds
    RankNTypes
    ViewPatterns
    PatternSynonyms
    DerivingVia
    StandaloneDeriving
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs -fno-warn-unticked-promoted-constructors -fprint-potential-instances -Wno-incomplete-patterns
