name:                ya
version:             0.0.0
synopsis:            ...
description:         Extremely composable programming language
homepage:            muratkasimov.art/Ya
license-file:        LICENSE
extra-source-files:  CHANGELOG.md, README.md
author:              Murat Kasimov <iokasimov.m@gmail.com>
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2024 Murat Kasimov
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules: Ya
  other-modules:
    Ya.Algebra
    Ya.Algebra.Abstract
    Ya.Algebra.Definition
    Ya.Algebra.Instances
    Ya.Algebra.Operators
    Ya.Algebra.Operators.Functions
    Ya.Algebra.Operators.Handcraft
    Ya.Algebra.Operators.Generated
    Ya.Program
    Ya.Program.Interface
    Ya.Program.Interface.Field
    Ya.Program.Interface.Match
    Ya.Program.Interface.Stack
    Ya.Program.Interface.Shiftable
    Ya.Program.Patterns
    Ya.Program.Primitive
    Ya.Program.Labels
  default-extensions:
    DataKinds
    DeriveAnyClass
    ConstraintKinds
    EmptyCase
    ExistentialQuantification
    GADTs
    QuantifiedConstraints
    InstanceSigs
    StandaloneKindSignatures
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    StandaloneKindSignatures
    LiberalTypeSynonyms
    LambdaCase
    FunctionalDependencies
    MultiParamTypeClasses
    NoImplicitPrelude
    PackageImports
    PolyKinds
    RankNTypes
    ViewPatterns
    PatternSynonyms
    DerivingVia
    StarIsType
    StandaloneDeriving
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs -fno-warn-unticked-promoted-constructors -fprint-potential-instances -Wno-missing-pattern-synonym-signatures -dppr-user-length=0 -dppr-cols=10000
