name:                ya
version:             0.0.0
synopsis:            ...
description:         Extremely composable programming language
homepage:            muratkasimov.art/Ya
license-file:        LICENSE
extra-source-files:  CHANGELOG.md, README.md
author:              Murat Kasimov <iokasimov.m@gmail.com>
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2024 Murat Kasimov
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:
    Ya
    Ya.Algebra
    Ya.Operators
    Ya.Program
  other-modules:
    Ya.Algebra.Abstract
    Ya.Algebra.Definition
    Ya.Algebra.Effectful
    Ya.Algebra.Instances
    Ya.Operators.Mappings
    Ya.Operators.Handcraft
    Ya.Operators.Generated
    Ya.Operators.Generated.XX
    Ya.Operators.Generated.XXX
    -- Ya.Operators.Generated.XXXX
    Ya.Program.Interface
    Ya.Program.Interface.Fieldable
    Ya.Program.Interface.Matchable
    Ya.Program.Interface.Stackable
    Ya.Program.Interface.Shiftable
    Ya.Program.Interface.Keyable
    Ya.Program.Interface.Instances
    Ya.Program.Patterns
    Ya.Program.Primitive
    Ya.Program.Labels
  default-extensions:
    DataKinds
    DeriveAnyClass
    ConstraintKinds
    EmptyCase
    ExistentialQuantification
    GADTs
    QuantifiedConstraints
    InstanceSigs
    StandaloneKindSignatures
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    StandaloneKindSignatures
    LiberalTypeSynonyms
    LambdaCase
    FunctionalDependencies
    MultiParamTypeClasses
    NoImplicitPrelude
    PackageImports
    PolyKinds
    RankNTypes
    ViewPatterns
    PatternSynonyms
    DerivingVia
    StarIsType
    StandaloneDeriving
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs -fno-warn-unticked-promoted-constructors -fprint-potential-instances -Wno-missing-pattern-synonym-signatures -dppr-user-length=0 -dppr-cols=10000
